dev/keycloak/jars.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: auto-updater
