dev/keycloak/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  tls:
    - hosts:
      - auth.dev.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: auth.dev.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: keycloak-http
            servicePort: 80
